[gd_scene load_steps=8 format=2]

[ext_resource path="res://sprites/tileset/Image15.png" type="Texture" id=1]
[ext_resource path="res://Objects/ObjectBase/ColliderEvent.gd" type="Script" id=2]
[ext_resource path="res://Objects/Block/ObjectBase.gd" type="Script" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 192, 32, 16, 16 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "left",
"speed": 5.0
}, {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "right",
"speed": 5.0
}, {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "up",
"speed": 5.0
}, {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "down",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8.92794, 9.23124 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 7.93581, 8.13991 )

[node name="ObjectBase" type="Area2D"]
position = Vector2( 0.0992126, 0 )
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Animations" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "up"

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )
script = ExtResource( 2 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource( 4 )

[connection signal="body_entered" from="." to="." method="_on_Player_body_entered"]
[connection signal="area_entered" from="Area2D" to="Area2D/CollisionShape2D" method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="Area2D/CollisionShape2D" method="_on_Area2D_area_exited"]
[connection signal="body_entered" from="Area2D" to="Area2D/CollisionShape2D" method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="Area2D/CollisionShape2D" method="_on_Area2D_body_exited"]
[connection signal="object_collision" from="Area2D/CollisionShape2D" to="." method="_on_CollisionShape2D_object_collision"]
[connection signal="object_collision_end" from="Area2D/CollisionShape2D" to="." method="_on_CollisionShape2D_object_collision_end"]
